@@ -44,6 +44,7 @@
 - [#729] Moved Bezier curves can't be rotated.
 - [#742] Valentina produces wrong seam allowance.
 - [#743] Valentina doesn't update update pattern after adding item.
+- Fix translation variables.
 
 # Version 0.5.0 May 9, 2017
 - [#581] User can now filter input lists by keyword in function wizard.
